# screening-large-databases

./: .gitmodules  README.md  environment.yml  pyproject.toml
cfree/: compute.py  descriptors.py
cfree/store/: __init__.py
cfree/store/tests/: test_models.py
cfree/tests/: test_compute.py  test_descriptors.py
libs/: README.md
scripts/download-pubchem/: 2_find-mentions.py
scripts/match-names/: 0_download-from-pubchem.ipynb  1_match-known-materials.ipynb  2_find-mentions.py  3_compile-matches.ipynb  4_compute-capacities-of-matched.ipynb  4_display-matched-molecules.ipynb  5_display-matched-molecules.ipynb  README.md
scripts/screen-search-space/: README.md  screen.py  to-compare.smi
