[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = 'cfree'
version = '0.0.1'
description = 'Utilities employed while designing molecules for hydrogen fuel storage'
authors = [
    'Logan Ward <ward.logan.t@gmail.com>'
]
packages = [
    {include = "cfree"},
]

[tool.poetry.dependencies]
requests = "^2.13.0"